--- a/views/Home-Page.ejs
+++ b/views/Home-Page.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Adventure Campers</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -20,8 +20,10 @@
       <div class="hero-section">
         <img src="/images/hero-section.jpg" alt="" />
         <div class="msg">
-          <h1 class="title">Welcome To Our Website</h1>
-          <button class="scroll">More About Us</button>
+          <h1 class="title">
+            Welcome to Adventure Campers "Your Gateway to Nature"
+          </h1>
+          <button class="scroll"><a href="/about-us">More About Us</a></button>
         </div>
       </div>
     </main>
