--- a/views/access-denied.ejs
+++ b/views/access-denied.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Access Denied</title>
-    <link rel="stylesheet" href="/access-denied.css" />
+    <link rel="stylesheet" href="/css/access-denied.css" />
   </head>
   <body>
     <h1>Access Denied</h1>
-    <p>The application is only available Monday to Friday, 9 AM to 5 PM.</p>
-    <a href="/aboutUs">About Us</a>
+    <p>The application is only available Monday to Friday, 9 AM to 17 PM.</p>
+    <a href="/about-us">About Us</a>
   </body>
 </html>
