--- a/views/Contact-Us.ejs
+++ b/views/Contact-Us.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -16,5 +16,16 @@
         </ul>
       </div>
     </nav>
+    <main>
+      <div class="hero-section">
+        <img src="/images/contact.jpg" alt="" />
+        <div class="msg">
+          <h1 class="title">Get in Touch with Adventure Campers</h1>
+          <button class="scroll">
+            <a href="contact/contact-form">Contact Us</a>
+          </button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
