ready to upload

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
   padding-block: 20px;
   background-color: #808080;
   backdrop-filter: blur(200px);
