--- a/public/css/access-denied.css
+++ b/public/css/access-denied.css
@@ -14,6 +14,26 @@ body {
   color: #fff;
   flex-direction: column;
   margin: 0;
+  background-image: url(../images/access-denied.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  opacity: 0.6;
+  z-index: -1;
 }
 h1 {
   font-size: 3.5em;
