--- a/views/access-denied.ejs
+++ b/views/access-denied.ejs
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="/css/access-denied.css" />
   </head>
   <body>
-    <h1>Access Denied</h1>
-    <p>The application is only available Monday to Friday, 9 AM to 17 PM.</p>
-    <a href="/about-us">About Us</a>
+    <div class="container">
+      <h1>Access Denied</h1>
+      <p>The application is only available Monday to Friday, 9 AM to 17 PM.</p>
+      <a href="/about-us">About Us</a>
+    </div>
   </body>
 </html>
