--- a/views/contact-form.ejs
+++ b/views/contact-form.ejs
@@ -40,11 +40,9 @@
 
       <section id="contact-details">
         <h2>Other Ways to Reach Us</h2>
-        <p><strong>Phone:</strong> +1 (800) 123-4567</p>
+        <p><strong>Phone:</strong> +216 53 038 586</p>
         <p><strong>Email:</strong> info@adventurecampers.com</p>
-        <p>
-          <strong>Address:</strong> 123 Campground Road, Wilderness City, USA
-        </p>
+        <p><strong>Address:</strong> Beb Jdid, Sousse, Tunisia</p>
       </section>
     </main>
 
